--- a/react1backend/package.json
+++ b/react1backend/package.json
@@ -17,6 +17,9 @@
     "nodemon": "^2.0.1"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15"
   }
 }
